<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#000"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:id="@+id/direction_id"
        android:text="Direction"
        android:textColor="#fff"
        android:textSize="17dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextClock
            android:layout_width="match_parent"
            android:textSize="17dp"
            android:textColor="#fff"
            android:text="Time"
            android:id="@+id/time_id"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="end"
            android:layout_height="wrap_content">

        </TextClock>

    </LinearLayout>
</LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:text="0"
            android:id="@+id/speed_id"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="#FFf"
            android:textStyle="bold"
            android:textSize="50dp"
            android:layout_height="200dp">
        </TextView>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/km"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/kilometer_id"
        android:gravity="end"
        android:layout_marginTop="50dp"
        android:layout_marginRight="100dp"
        android:layout_height="wrap_content">

    </TextView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/allt"
                android:id="@+id/alt_id"
                android:textColor="#fff"
                android:textSize="17dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="17dp"
                    android:textColor="#fff"
                    android:id="@+id/Topid"
                    android:textStyle="bold"
                    android:text="@string/Toptext"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:id="@+id/smeter"
                android:text="@string/Meter"
                android:textColor="@color/textcolor"
                android:textSize="17dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="17dp"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold"
                    android:id="@+id/sppedkm"
                    android:text="@string/zerokm"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/Triptext"
                android:id="@+id/tripidneww"
                android:textColor="#fff"
                android:textSize="17dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="17dp"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:id="@+id/tripspped_id"
                    android:text="@string/average"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/zKm"
                android:id="@+id/tripidnew"
                android:textColor="@color/textcolor"
                android:textSize="17dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="17dp"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold"
                    android:id="@+id/averid"
                    android:text="@string/zerokm"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="bottom|end"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/betry"
                android:layout_height="30dp">
            </ImageView>
            <TextView
                android:layout_width="280dp"
                android:textStyle="bold"
                android:id="@+id/percent"
                android:textColor="#fff"
                android:layout_marginTop="5dp"
                android:text="%"
                android:textSize="17dp"
                android:layout_height="wrap_content">
            </TextView>


                <ImageButton
                    android:layout_width="30dp"
                    android:gravity="end"
                    android:layout_gravity="end"
                    android:background="@drawable/setting"
                    android:layout_height="30dp">

                </ImageButton>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

